src/styles/global.css
@import "./reset.css";
@import "./theme.css";
@import "./typography.css";
@import "./view-transition.css";
@import "./print.css";
@import "./article.css";

/* Default styles */
html {
  background-color: var(--color-bg);
  scrollbar-color: var(--color-primary) var(--color-bg-dark);
}

body {
  /* Push footer to bottom of page */
  display: flex;
  flex-direction: column;

  font-family: var(--typeface-body);
  color: var(--color-text-light);
}

a {
  text-decoration: none;
  color: var(--color-selected);
}

code,
kbd {
  padding: 2px 6px 2px 6px;
  border-radius: var(--border-radius-sm);
}

code {
  background-color: var(--color-bg-inline-code);
}

kbd {
  background-color: var(--color-bg-dark);
  outline: 1px solid var(--color-text-faint);
}

samp {
}

:focus-visible {
  border-radius: var(--border-radius-sm);
  outline: 2px solid var(--color-selected);
}

/* Global classes */

/* https://www.scottohara.me/blog/2017/04/14/inclusively-hidden.html#hiding-content-visually */
.visually-hidden:not(:focus):not(:active) {
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.no-scroll {
  overflow-y: hidden;

  &::before {
    content: "";
    position: fixed;
    z-index: 90;
    inline-size: 100%;
    block-size: 100%;
    background-color: var(--color-overlay);
  }
}

.content-grid {
  --_max-width: var(--max-page-width);
  inline-size: min(100%, var(--_max-width));
  margin: var(--space-lg) auto var(--space-3xl) auto;
  padding-inline: var(--screen-inline-padding);
}

body.no-scroll .content-grid {
  padding-inline: var(--screen-inline-padding)
    calc(var(--screen-inline-padding) + var(--scrollbar-width));
}

.content-grid > * {
  min-inline-size: fit-content;
}

